// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WidgetPipView > detects back click action 1`] = `
<div>
  <div
    class="WidgetPipView-module_container"
    data-testid="widget-pip-container"
  >
    <div
      class="WidgetPipView-module_header"
    >
      <button
        aria-labelledby="_r_6_"
        class="_icon-button_1215g_8"
        data-kind="secondary"
        data-testid="base-card-back-button"
        role="button"
        style="--cpd-icon-button-size: 28px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.3 17.3-4.6-4.6a.9.9 0 0 1-.213-.325A1.1 1.1 0 0 1 8.425 12q0-.2.062-.375A.9.9 0 0 1 8.7 11.3l4.6-4.6a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7L10.8 12l3.9 3.9a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </div>
      </button>
      <div
        style="width: 20px; height: 20px; border-radius: 50%; background-color: grey;"
      />
      Room Name
    </div>
    <div
      class="WidgetPipView-module_roundedCornerContainer"
    >
      <div
        style="background-color: grey; flex-grow: 1;"
      />
    </div>
  </div>
</div>
`;

exports[`WidgetPipView > detects double click triggers back 1`] = `
<div>
  <div
    class="WidgetPipView-module_container"
    data-testid="widget-pip-container"
  >
    <div
      class="WidgetPipView-module_header"
    >
      <button
        aria-labelledby="_r_c_"
        class="_icon-button_1215g_8"
        data-kind="secondary"
        data-testid="base-card-back-button"
        role="button"
        style="--cpd-icon-button-size: 28px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.3 17.3-4.6-4.6a.9.9 0 0 1-.213-.325A1.1 1.1 0 0 1 8.425 12q0-.2.062-.375A.9.9 0 0 1 8.7 11.3l4.6-4.6a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7L10.8 12l3.9 3.9a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </div>
      </button>
      <div
        style="width: 20px; height: 20px; border-radius: 50%; background-color: grey;"
      />
      Room Name
    </div>
    <div
      class="WidgetPipView-module_roundedCornerContainer"
    >
      <div
        style="background-color: grey; flex-grow: 1;"
      />
    </div>
  </div>
</div>
`;

exports[`WidgetPipView > detects on mouse down for drag 1`] = `
<div>
  <div
    class="WidgetPipView-module_container"
    data-testid="widget-pip-container"
  >
    <div
      class="WidgetPipView-module_header"
    >
      <button
        aria-labelledby="_r_i_"
        class="_icon-button_1215g_8"
        data-kind="secondary"
        data-testid="base-card-back-button"
        role="button"
        style="--cpd-icon-button-size: 28px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.3 17.3-4.6-4.6a.9.9 0 0 1-.213-.325A1.1 1.1 0 0 1 8.425 12q0-.2.062-.375A.9.9 0 0 1 8.7 11.3l4.6-4.6a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7L10.8 12l3.9 3.9a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </div>
      </button>
      <div
        style="width: 20px; height: 20px; border-radius: 50%; background-color: grey;"
      />
      Room Name
    </div>
    <div
      class="WidgetPipView-module_roundedCornerContainer"
    >
      <div
        style="background-color: grey; flex-grow: 1;"
      />
    </div>
  </div>
</div>
`;

exports[`WidgetPipView > renders with gray widget 1`] = `
<div>
  <div
    class="WidgetPipView-module_container"
    data-testid="widget-pip-container"
  >
    <div
      class="WidgetPipView-module_header"
    >
      <button
        aria-labelledby="_r_0_"
        class="_icon-button_1215g_8"
        data-kind="secondary"
        data-testid="base-card-back-button"
        role="button"
        style="--cpd-icon-button-size: 28px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.3 17.3-4.6-4.6a.9.9 0 0 1-.213-.325A1.1 1.1 0 0 1 8.425 12q0-.2.062-.375A.9.9 0 0 1 8.7 11.3l4.6-4.6a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7L10.8 12l3.9 3.9a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </div>
      </button>
      <div
        style="width: 20px; height: 20px; border-radius: 50%; background-color: grey;"
      />
      Room Name
    </div>
    <div
      class="WidgetPipView-module_roundedCornerContainer"
    >
      <div
        style="background-color: grey; flex-grow: 1;"
      />
    </div>
  </div>
</div>
`;
